--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,20 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+   --title: #DB00FF;
+  --link-color:#F1B2CE;
+  --button-hover:#FF007066;
+  --text-color:#F1B2CE;
+  --accent-color: #ff0070;
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-button-color: #000028;
+  --text-button-color: #FF0070;
+  --title__card-color: #FF0070;
+  --border-from-button: #FF0070;
+  --color-from-corner: #FF0070;
+  --title-color: #000028;
+}
+
+  .theme-dark .decorative__REC {
+  display: inline;
 }
