--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,41 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --title: #FFC2E6;
+  --link-color:#F1B2CE;
+  --button-hover:#353430;
+  --text-color:#353430;
+  --accent-color: #FF8DCB;
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-button-color: #FFF1F7;
+  --text-button-color: #353430;
+  --title__card-color: #353430;
+  --border-from-button: #353430;
+  --color-from-corner: #353430;
+  --title-color: #353430;
+}
+
+  .theme-light .decorative__REC {
+  display: none;
+}
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+     --title: #FFC2E6;
+  --link-color:#F1B2CE;
+  --button-hover:#353430;
+  --text-color:#353430;
+  --accent-color: #FF8DCB;
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-button-color: #FFF1F7;
+  --text-button-color: #353430;
+  --title__card-color: #353430;
+  --border-from-button: #353430;
+   --color-from-corner: #353430;
+   --title-color: #353430;
+  }
+  .decorative__REC {
+  display: none;
+}
 }
