--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,458 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+    width: 100%;
+    background-color: #000028;
+    background-image: var(--bg-image, #000028);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+.header {
+    position: relative;
+    display: grid;
+    grid-template-rows: 1fr min-content 1fr;
+    padding-top: 20px;
+    padding-right: 9px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+}
+
+.decorated-zone {
+    block-size: 100vh;
+    min-block-size: 668px;
+}
+
+.header::before {
+    content: "";
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 25px;
+    height: 25px;
+    border-width: 1px 1px 0 0;
+    border-style: solid;
+    border-color: var(--color-from-corner, #ff0070);
+}
+
+.header::after {
+    content: "";
+    position: absolute;
+    top: 633px;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    border-width: 0 0 1px 1px;
+    border-style: solid;
+    border-color: var(--color-from-corner, #ff0070);
+    border-top: none;
+    border-right: none;
+}
+
+.header__theme-menu {
+    justify-self: end;
+    align-self: center;
+}
+
+.header__theme-menu-list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.header__theme-menu-item {
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-default, 400);
+    font-size: var(--font-size, 18px);
+    line-height: 18px;
+    text-align: center;
+}
+
+.header__theme-menu-button {
+    border: none;
+    color: var(--text-button-color, #ff0070);
+    text-transform: lowercase;
+    background-color: transparent;
+}
+
+.header__theme-menu-button:hover {
+    border: 1px solid var(--button-hover, #ff007066);
+}
+
+.header__theme-menu-button:focus {
+    outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+    text-decoration: underline #ff0070 solid;
+    text-underline-offset: 4px;
+}
+
+.header__theme-menu-button_type_dark {
+    border: 1px solid var(--border-from-button, #ff0070);
+}
+
+.decorative__REC {
+    position: absolute;
+    top: 10px;
+    right: 38px;
+    color: var(--accent-color, #ff0070);
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-default, 400);
+    font-size: var(--font-size, 18px);
+    line-height: 25px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.decorative__REC::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 43px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 4px 2px var(--accent-color, #ff0070);
+    background-color: var(--accent-color, #ff0070);
+}
+
+.title {
+    color: var(--title, #db00ff);
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-bold, 700);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 83%;
+    text-shadow: 4px 4px 0 var(--accent-color);
+}
+
+.description__title {
+    justify-self: end;
+    align-self: center;
+}
+
+.description__text {
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-bold, 700);
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.title-decor {
+    color: var(--title-color, #000028);
+    background-color: var(--accent-color, #ff0070);
+}
+
+.main {
+    padding-top: 40px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.section {
+    padding-bottom: 50px;
+}
+
+.title__card {
+    color: var(--title__card-color, #ff0070);
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-bold, 700);
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.title__card-text {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-bold, 700);
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.subtitle__card-text {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-family: var(--text-family, sans-serif);
+    font-weight: 400;
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.card__text {
+    color: var(--text-color, #f1b2ce);
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-default, 400);
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.link__in-text {
+    text-decoration: none;
+    text-shadow: 4px 1px 0 var(--accent-color, #ff0070);
+}
+
+.link__in-text:hover {
+    text-decoration: underline var(--link-color, #f1b2ce) solid;
+}
+
+.link__in-text:focus {
+    outline: none;
+}
+
+.link__in-text:focus-visible {
+    outline: 1px solid var(--link-color, #f1b2ce);
+}
+
+.title__card-picture {
+    margin-bottom: 10px;
+    font-family: var(--text-family, sans-serif);
+    font-weight: var(--font-weight-bold, 700);
+    font-size: var(--font-size, 18px);
+    line-height: 23.4px;
+}
+
+.pictures-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+}
+
+.picture-stylization {
+    width: calc(100vw - 20px);
+    object-fit: cover;
+}
+
+.footer {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.footer::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    width: 25px;
+    height: 25px;
+    border-width: 1px 1px 0 0;
+    border-style: solid;
+    border-color: var(--color-from-corner, #ff0070);
+}
+
+.footer::after {
+    content: "";
+    position: absolute;
+    top: 620px;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    border-width: 0 0 1px 1px;
+    border-style: solid;
+    border-color: var(--color-from-corner, #ff0070);
+}
+
+.footer__title-shadow {
+    text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+@media (width>=768px) {
+    .decorated-zone {
+        block-size: 100vh;
+        min-block-size: 1024px;
+    }
+
+    .header {
+        padding-right: 20px;
+        padding-left: 0;
+    }
+
+    .title {
+        font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+
+    .description__title {
+        max-inline-size: 364px;
+    }
+
+    .decorative__REC {
+        top: 20px;
+        right: 48px;
+    }
+
+    .header::before {
+        top: 20px;
+        right: 20px;
+    }
+    .header::after {
+        top: 979px;
+        left: 20px;
+    }
+
+    .main {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .section {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        gap: 16px;
+        margin-top: 20px;
+    }
+
+    .article-list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .title__card-text {
+        margin-top: 0;
+    }
+
+    .section__vertical {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        padding-top: 12px;
+        padding-bottom: 61px;
+    }
+
+    .article-list__horizontal {
+        grid-column: 1 / 4;
+        padding: 0;
+    }
+
+    .subtitle {
+        margin-bottom: 0;
+    }
+
+    .subtitle__card-text {
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+
+    .pictures-content {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-column: 1 / -1;
+        gap: 20px;
+    }
+
+    .title__card-picture {
+        grid-column: 1 / 4;
+        margin-top: 10px;
+    }
+
+    .picture-sunset {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+    }
+
+    .picture-icecream {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+    }
+
+    .picture-stylization {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .picture-tape {
+        grid-column: 1 / 1;
+        grid-row: 2 / 4;
+    }
+
+    .picture-street {
+        grid-column: 2 / 4;
+        grid-row: 3 / 4;
+    }
+
+    .footer {
+        padding-top: 45px;
+    }
+
+    .footer::before {
+        top: 40px;
+        right: 20px;
+    }
+
+    .footer::after {
+        top: 995px;
+        left: 20px;
+    }
+}
+
+@media (width >= 1024px) {
+    .decorated-zone {
+        block-size: 100vh;
+        min-block-size: 768px;
+    }
+
+    .header__theme-menu {
+        justify-self: center;
+        align-self: flex-start;
+    }
+
+    .header__theme-menu-list {
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .description__title {
+        max-inline-size: 491px;
+    }
+
+    .header::after {
+        top: 723px;
+    }
+
+    .section {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+    }
+    .section__vertical {
+        row-gap: 18px;
+        column-gap: 0;
+        padding-bottom: 60px;
+    }
+    .article-list {
+        grid-column: 2 / 4;
+    }
+
+    .article-list__horizontal {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column: 1 / 4;
+        column-gap: 20px;
+    }
+
+    .subtitle {
+        margin-bottom: 0;
+    }
+
+    .subtitle__card-text {
+        margin-top: 0;
+    }
+
+    .footer {
+        padding-bottom: 35px;
+    }
+
+    .footer::before {
+        top: 20px;
+        right: 20px;
+    }
+
+    .footer::after {
+        top: 725px;
+        left: 20px;
+    }
 }
