Третья проектная работа

--- a/styles/light.css
+++ b/styles/light.css
@@ -6,7 +6,7 @@
 
 :root.theme-light {
   --title: #FFC2E6;
-  --link-color:#F1B2CE;
+  --link-color:#353430;
   --button-hover:#353430;
   --text-color:#353430;
   --accent-color: #FF8DCB;
