--- a/styles/light.css
+++ b/styles/light.css
@@ -7,7 +7,7 @@
 :root.theme-light {
   --title: #FFC2E6;
   --link-color:#353430;
-  --button-hover:#353430;
+  --button-hover:#32312D66;
   --text-color:#353430;
   --accent-color: #FF8DCB;
   --bg-image: url(../images/cover-image-light.png);
@@ -23,6 +23,17 @@
   display: none;
 }
 
+/* .theme-light .header__theme-menu-button_type_light {
+    border: 1px solid var(--border-from-button, #ff0070);
+} */
+
+.theme-light .header__theme-menu-button_type_dark {
+  border: none;
+}
+
+.theme-light .header__theme-menu-button_type_light {
+    border: 1px solid var(--border-from-button, #ff0070);
+}
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -41,5 +52,14 @@
   }
   .decorative__REC {
   display: none;
+}
+
+.header__theme-menu-button_type_light {
+    border: none;
+}
+
+
+.header__theme-menu-button_type_dark {
+  border: none;
 }
 }
