--- a/styles/style.css
+++ b/styles/style.css
@@ -230,7 +230,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .footer::before {
