Третья проектная работа

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -13,6 +13,7 @@
   --border-from-button: #FF0070;
   --color-from-corner: #FF0070;
   --title-color: #000028;
+  --bg-color: #000028;
 }
 
   .theme-dark .decorative__REC {
