--- a/styles/light.css
+++ b/styles/light.css
@@ -24,18 +24,10 @@
   display: none;
 }
 
-.theme-light .header__theme-menu-button_type_dark {
-  border: none;
-}
-
-.theme-light .header__theme-menu-button_type_light {
-    border: 1px solid var(--border-from-button, #ff0070);
-}
-
 @media (prefers-color-scheme: light) {
   :root {
      --title: #FFC2E6;
-  --link-color:#F1B2CE;
+  --link-color:#353430;;
   --button-hover:#32312D66;
   --text-color:#353430;
   --accent-color: #FF8DCB;
@@ -50,14 +42,5 @@
   }
   .decorative__REC {
   display: none;
-}
-
-.header__theme-menu-button_type_light {
-    border: none;
-}
-
-
-.header__theme-menu-button_type_dark {
-  border: none;
 }
 }
