--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,9 @@
     position: relative;
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-right: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     padding-left: 10px;
 }
 
@@ -25,30 +25,26 @@
     min-block-size: 668px;
 }
 
-.header::before {
-    content: "";
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 25px;
-    height: 25px;
-    border-width: 1px 1px 0 0;
-    border-style: solid;
-    border-color: var(--color-from-corner, #ff0070);
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-start: 1px solid var(--color-from-corner, #ff0070);
+  border-block-end: 1px solid var(--color-from-corner, #ff0070);
 }
 
-.header::after {
-    content: "";
-    position: absolute;
-    top: 633px;
-    left: 10px;
-    width: 25px;
-    height: 25px;
-    border-width: 0 0 1px 1px;
-    border-style: solid;
-    border-color: var(--color-from-corner, #ff0070);
-    border-top: none;
-    border-right: none;
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-inline-end: 1px solid var(--color-from-corner, #ff0070);
+  border-block-start: 1px solid var(--color-from-corner, #ff0070);
 }
 
 .header__theme-menu {
@@ -75,6 +71,7 @@
     color: var(--text-button-color, #ff0070);
     text-transform: lowercase;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .header__theme-menu-button:hover {
@@ -86,11 +83,18 @@
 }
 
 .header__theme-menu-button:focus-visible {
-    text-decoration: underline var(--border-from-button,#ff0070 ) solid;
-    text-underline-offset: 4px;
+    border-bottom: 1px var(--border-from-button,#ff0070 ) solid;
 }
 
-.header__theme-menu-button_type_dark {
+.theme-dark .header__theme-menu-button_type_dark {
+    border: 1px solid var(--border-from-button, #ff0070);
+}
+
+.theme-light .header__theme-menu-button_type_light {
+    border: 1px solid var(--border-from-button, #ff0070);
+} 
+
+.theme-auto .header__theme-menu-button_type_auto {
     border: 1px solid var(--border-from-button, #ff0070);
 }
 
@@ -195,7 +199,7 @@
 }
 
 .link__in-text:hover {
-    text-decoration: underline var(--link-color, #f1b2ce) solid;
+    border-bottom: 1px var(--link-color, #f1b2ce) solid;
 }
 
 .link__in-text:focus {
@@ -231,30 +235,8 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 20px;
-}
-
-.footer::before {
-    content: "";
-    position: absolute;
-    top: 0px;
-    right: 10px;
-    width: 25px;
-    height: 25px;
-    border-width: 1px 1px 0 0;
-    border-style: solid;
-    border-color: var(--color-from-corner, #ff0070);
-}
-
-.footer::after {
-    content: "";
-    position: absolute;
-    top: 620px;
-    left: 10px;
-    width: 25px;
-    height: 25px;
-    border-width: 0 0 1px 1px;
-    border-style: solid;
-    border-color: var(--color-from-corner, #ff0070);
+    min-height: 668px;
+    height: 100vh;
 }
 
 .footer__title-shadow {
@@ -265,6 +247,16 @@
     .decorated-zone {
         block-size: 100vh;
         min-block-size: 1024px;
+    }
+
+    .decorated-zone::after {
+         bottom: 20px;
+  left: 20px;
+    }
+
+    .decorated-zone::before {
+        top: 20px;
+        right: 20px;
     }
 
     .header {
@@ -285,24 +277,20 @@
         right: 48px;
     }
 
-    .header::before {
-        top: 20px;
-        right: 20px;
-    }
-    .header::after {
-        top: 979px;
-        left: 20px;
-    }
-
     .main {
         padding-right: 20px;
         padding-left: 20px;
     }
+
     .section {
         display: grid;
         grid-template-columns: 1fr 2fr;
         gap: 16px;
         margin-top: 20px;
+    }
+
+    .picture-section {
+        gap: 0;
     }
 
     .article-list {
@@ -376,24 +364,21 @@
     }
 
     .footer {
-        padding-top: 45px;
+        padding-top: 60px;
     }
 
-    .footer::before {
-        top: 40px;
-        right: 20px;
-    }
-
-    .footer::after {
-        top: 995px;
-        left: 20px;
-    }
 }
 
 @media (width >= 1024px) {
     .decorated-zone {
         block-size: 100vh;
         min-block-size: 768px;
+    }
+
+    .header {
+        padding-top: 20px;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .header__theme-menu {
@@ -403,15 +388,12 @@
 
     .header__theme-menu-list {
         flex-direction: row;
-        gap: 20px;
+        gap: 25px;
     }
 
     .description__title {
         max-inline-size: 491px;
-    }
-
-    .header::after {
-        top: 723px;
+        margin-right: 20px;
     }
 
     .section {
@@ -446,13 +428,4 @@
         padding-bottom: 35px;
     }
 
-    .footer::before {
-        top: 20px;
-        right: 20px;
-    }
-
-    .footer::after {
-        top: 725px;
-        left: 20px;
-    }
 }
