--- a/styles/light.css
+++ b/styles/light.css
@@ -1,8 +1,3 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
 
 :root.theme-light {
     --title: #ffc2e6;
@@ -20,7 +15,7 @@
     --bg-color: #fff1f7;
 }
 
-.theme-light .decorative__REC {
+.theme-light .header__rec  {
     display: none;
 }
 
@@ -40,7 +35,7 @@
         --title-color: #353430;
         --bg-color: #fff1f7;
     }
-    .decorative__REC {
+    .header__rec  {
         display: none;
     }
 }
