--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,23 +1,23 @@
 
-
 :root.theme-dark {
-   --title: #DB00FF;
-  --link-color:#F1B2CE;
-  --button-hover:#FF007066;
-  --text-color:#F1B2CE;
-  --accent-color: #ff0070;
-  --bg-image: url(../images/cover-image-dark.png);
-  --bg-button-color: #000028;
-  --text-button-color: #FF0070;
-  --title__card-color: #FF0070;
-  --border-from-button: #FF0070;
-  --color-from-corner: #FF0070;
-  --title-color: #000028;
-  --bg-color: #000028;
+    --title: #db00ff;
+    --link-color: #f1b2ce;
+    --button-hover: #ff007066;
+    --text-color: #f1b2ce;
+    --accent-color: #ff0070;
+    --bg-image: url(../images/cover-image-dark.png);
+    --bg-button-color: #000028;
+    --text-button-color: #ff0070;
+    --title__card-color: #ff0070;
+    --border-from-button: #ff0070;
+    --color-from-corner: #ff0070;
+    --title-color: #000028;
+    --bg-color: #000028;
 }
 
-  .theme-dark .header__rec  {
-  display: inline;
+.theme-dark .header__rec {
+    display: inline;
 }
+
  
 
