--- a/styles/style.css
+++ b/styles/style.css
@@ -127,6 +127,8 @@
 .description__title {
     justify-self: end;
     align-self: center;
+    max-width: 355px;
+    margin-right: -5px;
 }
 
 .description__text {
@@ -134,6 +136,12 @@
     font-weight: var(--font-weight-bold, 700);
     font-size: var(--font-size, 18px);
     line-height: 23.4px;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .title-decor {
@@ -161,7 +169,7 @@
 
 .title__card-text {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     font-family: var(--text-family, sans-serif);
     font-weight: var(--font-weight-bold, 700);
     font-size: var(--font-size, 18px);
@@ -170,7 +178,7 @@
 
 .subtitle__card-text {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     font-family: var(--text-family, sans-serif);
     font-weight: 400;
     font-size: var(--font-size, 18px);
@@ -264,7 +272,7 @@
         max-inline-size: 364px;
     }
 
-    .header__rec{
+    .header__rec {
         top: 20px;
         right: 48px;
     }
@@ -283,6 +291,7 @@
 
     .picture-section {
         gap: 0;
+        row-gap: 10px;
     }
 
     .article-list {
@@ -293,6 +302,7 @@
 
     .title__card-text {
         margin-top: 0;
+        margin-bottom: 0;
     }
 
     .contetnt-section {
@@ -313,7 +323,7 @@
 
     .subtitle__card-text {
         margin-top: 0;
-        margin-bottom: 10px;
+        margin-bottom: 0;
     }
 
     .pictures-content {
@@ -391,11 +401,16 @@
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: auto;
     }
-    .contetnt-section{
+    .contetnt-section {
         row-gap: 18px;
         column-gap: 0;
         padding-bottom: 60px;
     }
+
+    .title__card-text {
+        margin-bottom: 0;
+    }
+
     .article-list {
         grid-column: 2 / 4;
     }
@@ -413,6 +428,7 @@
 
     .subtitle__card-text {
         margin-top: 0;
+        margin-bottom: 0;
     }
 
     .footer {
